Global fix for weird bootstrap .dropdown-backdrop on mobile.

--- a/elk/assets/css/common.styl
+++ b/elk/assets/css/common.styl
@@ -5,6 +5,11 @@
 body
     min-height: 640px
 
+
+@media (max-width:1025px)
+    .dropdown-backdrop
+        display: none
+
 a.pseudo
     color black
     border-bottom: dotted 1px
