--- a/market/assets/schedule_popup/style.styl
+++ b/market/assets/schedule_popup/style.styl
@@ -111,8 +111,5 @@
             margin-top: 15px
             margin-bottom: 10px
 
-        .dropdown-backdrop
-            display none
-
         .slots .btn-group
             margin-left: 2px
